Galeria en Detalles

--- a/src/templates/equipo_list.html
+++ b/src/templates/equipo_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="col-sm-6 col-sm-offset-3">
-       <h1>{{ titulo }}</h1>
+       <h1>asaasddasfSADFSAFSAFSAFDSAFSAFSAFsd</h1>
         <form action="" method="GET">
             <input type="text" name="q" placeholder="Buscar" value="{{ request.GET.q }}"/>
             <input type="submit" value="Buscar"/>
