--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -42,28 +42,24 @@
 </style>
 
 <body class="body-about">
-{% include 'social.html' %}
-
     <div class=" foto">
         <img  class="responsive" src="{% static 'img/about2.jpg' %}" alt="foto">
         <h1>¿QUIÉNES SOMOS?</h1>
     </div>
-
-            <div class="col-md-8 col-md-offset-2">
-                <article>
-                    <div class="page-header">
-                        <h2 class="post-title">QUIÉNES SOMOS?</h2>
-                        <p class="post-contenido text-justify" style="font-size: 25px;"><br>
-                        Somos una empresa joven, pero con experiencia de ventas de equipo de computo,venta de accesorios, instalación de redes,
-                        consumibles, mantenimiento preventivo, mantenimiento correctivos y más….
-                    </p>
-                    </div>
-                </article>
+    <div class="col-md-8 col-md-offset-2">
+        <article>
+            <div class="page-header">
+                <h2 class="post-title">QUIÉNES SOMOS?</h2>
+                <p class="post-contenido text-justify"><br>
+                Somos una empresa joven, pero con experiencia de ventas de equipo de computo,venta de accesorios, instalación de redes,
+                consumibles, mantenimiento preventivo, mantenimiento correctivos y más….
+            </p>
             </div>
+        </article>
+    </div>
 
     <div class="col-md-10 col-md-offset-1">
         <img src="{% static 'img/misva.png' %}" alt="" class="img-responsive">
     </div>
-
 </body>
 {%endblock%}
