--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,17 +10,18 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/social-icon.css' %}">
     <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
-    <link rel="stylesheet" href="{% static 'css/social2.css' %}">
     <script src="https://use.fontawesome.com/e5ab5ecece.js"></script>
     <script src="http://maps.google.com/maps/api/js?sensor=false&callback=iniciar">
 </script>
     <title>eicom</title>
 </head>
 <body>
-    {% include 'navbar.html' %}
+{% include 'barra_top.html' %}
+
+{% include 'green_bar.html'%}
+
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
@@ -48,8 +49,6 @@
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
-
-
 
     {% block content %}
 
