--- a/src/templates/categoria.html
+++ b/src/templates/categoria.html
@@ -1,26 +1,81 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%}
 {% load static %}
 {% block content %}
+<style>
+    {%block style%}
+        .zoom{
+            transition: 200ms ease;
+            -moz-transition: 200ms ease; /* Firefox */
+            -webkit-transition: 200ms ease; /* Chrome - Safari */
+            -o-transition: 200ms ease; /* Opera */
+        }
+        .zoom:hover{
+            transform : scale(1.05);
+            -moz-transform : scale(1.05); /* Firefox */
+            -webkit-transform : scale(1.05); /* Chrome - Safari */
+            -o-transform : scale(1.05); /* Opera */
+            -ms-transform : scale(1.05); /* IE9 */
+        }
+        .text-align-index {
+            text-align: center;
+        }
 
-<div class="container col-md-9">
-    <div class="row">
-        {% for obj in object_list %}
-            <div class="col-md-4">
-                <div class="thumbnail">
-                    {% if obj.imagen %}
-                        <img src="{{ obj.imagen.url }}" class="img-responsive thumbnail" />
-                    {% endif %}
-                    <div class="caption">
-                        <h2><a href="{{ obj.get_absolute_url }}">{{ obj.nombre }}</a></h2><br>
-                        <p>{{ obj.marca }} {{ obj.modelo }} <br>
-                             {{ obj.procesador }} <br>
-                             {{ obj.ram }}</p><br>
-                        <p><a href="{{ obj.get_absolute_url }}" class="btn btn-primary" role="button">Ver detalles completos</a></p>
+        .emerald-flat-button {
+            position: relative;
+            vertical-align: top;
+            width: 100%;
+            height: 60px;
+            padding: 0;
+            font-size: 22px;
+            color: white;
+            text-align: center;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
+            background: #92d14f;
+            border: 0;
+            border-bottom: 2px solid #568624;
+            cursor: pointer;
+            -webkit-box-shadow: inset 0 -2px #568624;
+            box-shadow: inset 0 -2px #568624;
+            padding-top: 0.3cm;
+        }
+        .emerald-flat-button:active {
+            top: 1px;
+            outline: none;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
+    {%endblock%}
+</style>
+<body>
+    <div class="col-md-12">
+        <div class="container-fluid">
+            {% include 'searchbox.html' %}
+        </div>
+        {% include 'menu_horizontal.html' %}
+        <div class="container">
+            <div class=" col-md-12">
+                <br>
+                {% for obj in object_list %}
+                    <div class="col-md-3 text-align-index zoom"><br><br>
+                        {% if obj.imagen %}
+                            <img src="{{ obj.imagen.url }}" class="img-responsive  " alt=""/>
+                        {% endif %}
+                        <div class="page-header">
+                            <h4><a href="{{ obj.get_absolute_url }}">{{ obj.nombre }}</a></h4>
+                        </div>
+                        <h6><a href="{{ obj.get_absolute_url }}">{{ obj.modelo }}</a></h6>
+                        <br>
+                        <p><h2>$ {{ obj.precio }}</h2></p>
+                        <div class="footer buttons-index"><br>
+                            <p><a href="{{ obj.get_absolute_url }}" class="btn emerald-flat-button" role="button">Detalles</a></p>
+                        </div>
                     </div>
-                </div>
+                {% endfor %}
             </div>
-        {% endfor %}
+        </div>
+        <hr>
     </div>
-</div>
-
+    {% include 'marcas.html' %}
+    {% include 'footer.html' %}
+</body>
 {% endblock %}
