--- a/src/templates/equipo_detail.html
+++ b/src/templates/equipo_detail.html
@@ -1,108 +1,78 @@
-{% extends 'base.html' %}
+{% extends 'index.html' %}
 {% load static %}
 {% block head_title %}{{ instance.nombre }} | {{ block.super }}{% endblock head_title %}
 {% block content %}
-
     <style>
         {% block style %}
 
-        .indent-detail{ padding-left: 1.4em }
+        .indent-detail{
+            padding-left: 1.4em;
+            /*padding-top: 1cm;*/
+            color: orangered;
+        }
 
         .align-detail {
-            text-align: center;
-            padding-top: 0.3cm;
+            /*text-align: left;*/
+            /*padding-top: 1cm;*/
+            color: orangered;
         }
         {% endblock style %}
-    </style><br>
-    <body style="background-color: #25343F">
+    </style>
+    <body>
         <div class="container-fluid">
-            <div class="panel">
-                <div class="panel-heading">
-                    <div class="page-header">
-                        <h1 class="indent-detail">{{ instance.nombre }}</h1>
-                    </div>
+            <div class="page-header">
+                <h1 class="indent-detail">{{ instance.nombre }}</h1>
+            </div>
+            <div class="col-md-12">
+                <div class="col-md-6"><br><br>
+                    {% if instance.imagen %}
+                        <img src="{{ instance.imagen.url }}" class="img-responsive thumbnail" alt=""/>
+                   {% endif %}
                 </div>
-                <div class="panel-body">
-                    <div class="panel-body col-md-12">
-                        <div class="col-md-4 col-md-offset-1"><br><br>
-                            {% if instance.imagen %}
-                                <img src="{{ instance.imagen.url }}" class="img-responsive thumbnail" alt=""/>
-                                <div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="box_count" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
-                            {% endif %}
-                        </div>
-                        <div class="col-md-5 col-md-offset-1">
-                            <strong><h2>Especificaciones:</h2></strong>
-                            <hr>
-                            <br>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Modelo:</strong> {{ instance.modelo }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Marca:</strong> {{ instance.marca }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Procesador:</strong> {{ instance.procesador }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Disco duro:</strong> {{ instance.disco_duro }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Pantalla:</strong> {{ instance.pantalla }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Memoria Ram:</strong> {{ instance.memoria_ram }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Batería:</strong> {{ instance.bateria }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Cámara:</strong> {{ instance.camara }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Tarjeta de video:</strong> {{ instance.video }}
-                            <hr>
-                            <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Adaptador A.C.:</strong> {{ instance.adaptador_ac }}
-                            <hr><p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Precio:</strong> {{ instance.precio }}
-                        </div>
+                <div class="col-md-6">
+                    <div class="page-header align-detail">
+                        <h2>Especificaciones</h2>
                     </div>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Modelo:</strong> {{ instance.modelo }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Marca:</strong> {{ instance.marca }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Procesador:</strong> {{ instance.procesador }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Disco duro:</strong> {{ instance.disco_duro }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Pantalla:</strong> {{ instance.pantalla }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Memoria Ram:</strong> {{ instance.memoria_ram }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Batería:</strong> {{ instance.bateria }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Cámara:</strong> {{ instance.camara }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Tarjeta de video:</strong> {{ instance.video }}
+                    <hr>
+                    <p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Adaptador A.C.:</strong> {{ instance.adaptador_ac }}
+                    <hr><p parrafo><i class="fa fa-angle-double-right" aria-hidden="true"></i><strong> Precio:</strong> {{ instance.precio }}
                 </div>
                 <div class="container-fluid">
-                    <div class="page-header">
-                        <hr>
-                        <h1 class="align-detail">Galería:</h1>
-                    </div>
-                    <div id="carousel-1" class="carousel slide show" data-ride="carousel">
-                        <!-- contenedor de los slide -->
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item active" >
-                                <img class="img-responsive" src="{% static 'img/slide1.jpg' %}" alt="">
-                                <div class="carousel-caption hidden-xs hidden-sm">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, dolores.</p>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <img class="img-responsive " src="{% static 'img/slide5.jpg' %}" alt="">
-                                <div class="carousel-caption hidden-xs hidden-sm">
-                                    <h3>Este es nuestro slide #5</h3>
-                                    <p>Lorem ipsum dolor sit amet.</p>
-                                </div>
-                            </div>
-
-                            <div class="item">
-                                <img class="img-responsive " src="{% static 'img/slide6.jpg' %}" alt="">
-                                <div class="carousel-caption hidden-xs hidden-sm">
-                                    <h3>Este es nuestro slide #6</h3>
-                                    <p>Lorem ipsum dolor sit amet.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Controles -->
-                        <a href="#carousel-1" class="left carousel-control" role="button" data-slide="prev">
-                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                            <span class="sr-only">Anterior</span>
-                        </a>
-                        <a href="#carousel-1" class="right carousel-control" role="button" data-slide="next">
-                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                            <span class="sr-only">Siguiente</span>
-                        </a>
-                    </div>
+                    <hr>
                 </div>
-                <br>
+            </div>
+
+            <div class="container-fluid">
+                <div class="page-header">
+                    <h2 class="align-detail">Galería:</h2>
+                </div>
+                {% include 'slideshow_imagenes_productos.html'%}
+            </div>
+
+            <div class="col-md-12">
+                <hr>
+                <div class="fb-like" data-href="https://www.facebook.com/EICOM" data-layout="box_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+                <hr>
             </div>
         </div>
-        {% include 'social_footer.html'%}
+        {% include 'footer.html'%}
     </body>
 {% endblock content %}
 
