--- a/src/templates/categoria.html
+++ b/src/templates/categoria.html
@@ -52,6 +52,7 @@
             {% include 'searchbox.html' %}
         </div>
         {% include 'menu_horizontal.html' %}
+        {% include "breadcrumb.html" %}
         <div class="container">
             <div class=" col-md-12">
                 <br>
