--- a/src/templates/equipo_detail.html
+++ b/src/templates/equipo_detail.html
@@ -19,6 +19,15 @@
         {% endblock style %}
     </style>
     <body>
+        <!-- <div class="container">
+          <ol class="breadcrumb">
+            <li><a href="{% url 'start:inicio' %}">Inicio</a></li>
+            <li><a href="{% url 'start:filtro' instance.categoria %}">{{ instance.categoria }}</a></li>
+            <li><a href="#">{{ instance.nombre }}</a></li>
+          </ol>
+        </div>-->
+        {% include 'breadcrumb.html' %}
+
         <div class="container-fluid">
             <div class="page-header">
                 <h1 class="indent-detail">{{ instance.nombre }}</h1>
