--- a/src/templates/slideshow.html
+++ b/src/templates/slideshow.html
@@ -11,6 +11,9 @@
 </style>
 
     <div id="carousel-1" class="carousel slide show" data-ride="carousel">
+        <!-- indicadores -->
+        {% for obj in object_slideshow %}
+        {% endfor %}
         <!-- contenedor de los slide -->
         <div class="carousel-inner" role="listbox">
             {% for obj in object_slideshow %}
