--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,6 +4,7 @@
 <style>
     {%block style%}
         .texto-mas-vendido{
+            padding-top: 0.3cm;
             color: orangered;
 
         }
@@ -47,10 +48,13 @@
             -webkit-box-shadow: none;
             box-shadow: none;
         }
+        .body-index {
+            background: white;
+        }
     {%endblock%}
 </style>
-<body>
-    <div class="col-md-12" >
+<body class="body-index">
+    <div class="col-md-12 body-index" >
         <div class="container-fluid">
            {% include 'searchbox.html' %}
         </div>
@@ -63,8 +67,8 @@
                 <br>
                 {% for obj in object_list %}
                     <div class="col-md-3 text-align-index zoom"><br><br>
-                        {% if obj.imagen_1 %}
-                            <img src="{{ obj.imagen_1.url }}" class="img-responsive  " alt=""/>
+                        {% if obj.imagen %}
+                            <img src="{{ obj.imagen.url }}" class="img-responsive  " alt=""/>
                         {% endif %}
                         <div class="page-header">
                             <h4><a href="{{ obj.get_absolute_url }}">{{ obj.nombre }}</a></h4>
@@ -78,11 +82,12 @@
                     </div>
                 {% endfor %}
             </div>
+            {% include 'pagination.html' %}
         </div>
-        <hr>
     </div>
-    {% include 'marcas.html' %}
-
+    {%include 'marcas.html'%}
     {% include 'footer.html' %}
 </body>
 {% endblock %}
+
+
